tests/ok/prelude-input.ari
fn main() -> i64 {
  let count = arg_count();
  let first = arg(0);
  let byte = read_byte();
  let qualified = io::read_byte();
  let input_qualified = input::read_byte();
  if count >= 0 {
    return byte + qualified + input_qualified - byte - qualified - input_qualified;
  }
  let ignored = first;
  return 0;
}
