tests/errors/ari-builtin-signature-arity.ari
extern "ari" fn bad() -> i64 = "ari_builtin_write_i64";

fn main() -> i64 {
  return 0;
}
